cmake_minimum_required(VERSION 3.10)
project(OU_process_2)
set(R_include "/usr/share/R/include") 
set(R_lib "/usr/lib/R/lib/libR.so")
set(Rcpp_include "/usr/local/lib/R/site-library/Rcpp/include")
#set(Rcpp_lib "/usr/local/lib/R/site-library/Rcpp/libs/Rcpp.so")
#set(Rcpp_other_lib "/home/ubuntu/libRcpp.so")
set(RInside_include "/usr/local/lib/R/site-library/RInside/include")
#set(RInside_lib "/usr/local/lib/R/site-library/RInside/libs/RInside.so")
set(RInside_other_lib "/usr/local/lib/R/site-library/RInside/lib/libRInside.so")
find_package(Eigen3 3.4 REQUIRED)
#set(MPFR_INCLUDE_DIR "/usr/include/mpfr.h")
set(MPFR_LIBRARY  "/usr/lib/x86_64-linux-gnu/libmpfr.so")
#set(GMPXX_INCLUDE_DIR "/usr/include/ gmpxx.h")
set(GMPXX_LIBRARY "/usr/lib/x86_64-linux-gnu/libgmpxx.so")
#set(GMP_INCLUDE_DIR "/usr/include/gmp.h")
set(GMP_LIBRARY "/usr/lib/x86_64-linux-gnu/libgmp.so")
set(MPREAL_INCLUDE_DIR "/home/sanath/mpreal")
#set(CLN_INCLUDE_DIR "/usr/include/cln")
set(CLN_LIBRARY "/usr/lib/x86_64-linux-gnu/libcln.so")
#set(GINAC_INCLUDE_DIR "/usr/include/ginac")
set(GINAC_LIBRARY "/usr/lib/x86_64-linux-gnu/libginac.so")
add_library(get_vol STATIC  get_vol.cpp get_vol.hpp)
target_include_directories(get_vol PRIVATE ${R_include} ${Rcpp_include} ${RInside_include})
#target_link_options(get_vol.e PUBLIC "-nostartfiles")
target_link_libraries(get_vol PUBLIC Eigen3::Eigen ${R_lib} ${Rcpp_lib} ${RInside_lib} ${Rcpp_other_lib} ${RInside_other_lib})
add_library(getfunc STATIC getfunc.cpp getfunc.hpp get_vol.cpp get_vol.hpp)
target_include_directories(getfunc PUBLIC ${CLN_INCLUDE_DIR} ${GINAC_INCLUDE_DIR} ${R_include} ${Rcpp_include} ${RInside_include} ${Rcpp_other_lib} ${RInside_other_lib})
target_link_libraries(getfunc PUBLIC Eigen3::Eigen ${CLN_LIBRARY} ${GINAC_LIBRARY} ${R_lib} ${Rcpp_lib} ${RInside_lib} ${Rcpp_other_lib} ${RInside_other_lib} get_vol)
add_library(map_ex STATIC map_ex.cpp map_ex.hpp)
target_include_directories(map_ex PUBLIC ${CLN_INCLUDE_DIR} ${GINAC_INCLUDE_DIR})
target_link_libraries(map_ex PUBLIC ${CLN_LIBRARY} ${GINAC_LIBRARY})
add_executable(OU_process.e OU_process.cpp OU_optim.cpp OU_optim.hpp map_ex.cpp  map_ex.hpp getfunc.cpp getfunc.hpp get_vol.cpp get_vol.hpp)
target_include_directories(OU_process.e PUBLIC ${MPREAL_INCLUDE_DIR} ${CLN_INCLUDE_DIR} ${GINAC_INCLUDE_DIR} ${RInside_include} ${Rcpp_include} ${R_include})
#target_compile_options(OU_process.e PRIVATE  -frounding-math -fsignaling-nans -ffp-contract=off -fno-fast-math)
target_link_libraries(OU_process.e PRIVATE ipopt Eigen3::Eigen ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${MPFR_LIBRARY} ${CLN_LIBRARY} ${GINAC_LIBRARY} map_ex  getfunc get_vol)
